--- a/index.html
+++ b/index.html
@@ -2,75 +2,58 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Color+Emoji&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link href="./css/main.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
 <body>
-    <div class="v1_2">
-        <div class="v1_3">
-            <div class="v1_4"></div>
-            <div class="v1_5"></div>
-            <div class="v1_6"></div><span class="v1_7">MastersBrew celebrates coffee
-                culture with rich flavors and
-                brewing finesse.</span><span class="v1_8">MastersBrew offers an
-                authentic coffee
-                experience with a touch</span><span class="v1_9">Artisanal Blends Showcase</span><span
-                class="v1_10">coffee culture, offering a blend of
-                tradition and innovation for a delightful
-                coffee experience.</span><span class="v1_11">exceptional coffee with a touch of
-                heritage, ensuring a delightful journey
-                for every sip.</span>
-            <div class="v1_12"><span class="v1_13">Join the Experience</span></div>
-            <div class="v1_14"><span class="v1_15">Explore the Craft</span></div><span class="v1_16">MastersBrew and
-                the</span><span class="v1_17">MastersBrew is dedicated to crafting</span><span class="v1_18">MastersBrew
-                embodies the essence of</span>
-        </div>
-        <div class="v1_19"><span class="v1_21">都会の隠れ家で味わう、</span><span
-                class="v1_22">都会の喧騒を離れ、どこか懐かしい空間で、心温まる一杯をどうぞ。長年愛され続けるこの場所で、ゆっくりと時を忘れるひとときをお過ごしください。</span>
-            <div class="v1_23"><span class="v1_24">Explore MastersBrew</span></div><span class="v1_25">昔ながらの美味しさ</span>
-            <div class="v1_26"><span class="v1_27">Order Now</span></div>
-            <div class="v1_28"><span class="v1_29">Discover More</span></div><span class="v1_30">Indulge in</span><span
-                class="v1_31">Handcrafted</span><span class="v1_32">Specialty</span><span class="v1_34">Signature
-                Blends</span><span class="v1_35">Master's Selection</span><span class="v1_36">98.7%</span><span
-                class="v1_37">Master's Touch</span><span class="v1_38">Exclusive Blend</span><span
-                class="v1_39">Experience</span><span class="v1_40">Brewing</span>
-            <div class="v1_41"></div><span class="v1_42">Get in</span><span class="v1_43">Meet</span><span
-                class="v1_44">Bre</span>
-            <div class="v3_5"></div>
-        </div>
-        <div class="v1_45">
-            <div class="v1_46"></div><span class="v1_47">Embark on a Coffee Journey with</span>
-            <div class="v1_48"><span class="v1_49">Enter email for latest updates</span></div><span
-                class="v1_50">Collaborate with</span><span class="v1_51">Brewing</span><span
-                class="v1_52">Exclusive</span><span class="v1_53">Terms of</span><span class="v1_54">Privacy</span><span
-                class="v1_55">Conne</span><span class="v1_56">Coffee</span><span class="v1_57">Maste</span><span
-                class="v1_58">Our</span><span class="v1_59">Bre</span>
-        </div>
-        <div class="v1_60"><span class="v1_61">Recommended by</span><span class="v1_62">Barist</span><span
-                class="v1_63">Brewi</span><span class="v1_64">Coffe</span><span class="v1_65">Coffe</span><span
-                class="v1_66">Roast</span>
-            <div class="v3_70"></div>
-            <div class="v3_71"></div>
-            <div class="v3_72"></div>
-        </div>
-        <div class="v3_74">
-            <div class="v3_75">
-                <div class="v3_76">
-                    <div class="v3_77">
-                        <div class="v3_78">
-                            <div class="v3_79"><span class="v3_80">CLOSE: 20:00</span></div><span class="v3_81">|</span>
-                            <div class="v3_82"><span class="v3_83">OPEN: 8:00</span></div>
-                        </div>
-                        <div class="v3_84">
-                            <div class="v3_85"><span class="v3_86">Business Hours:</span></div>
-                        </div>
-                    </div>
-                </div>
+    <div class="v14_2">
+        <div class="v20_40">
+            <div class="v20_41">
+                <div class="v20_42"></div>
+                <div class="v20_43"></div>
+                <div class="v20_44"></div><span class="v20_45">Experience the warmth and creativity of our
+                    long-established coffee shop. Join us in
+                    celebrating the art of coffee making and the
+                    legacy of the master behind it all</span><span class="v20_46">Explore Our World</span><span
+                    class="v20_47">Meet the Master</span>
             </div>
+            <div class="v20_48"><span class="v20_49">Create memorable coffee experiences with us. Join our team and be
+                    at the forefront of crafting delicious beverages
+                    that delight our customers.</span><span class="v20_50">Roast and brew with precision. If you have a
+                    love for the art of coffee roasting and want to be part of a team that
+                    values quality, explore our Roaster positions.</span><span class="v20_51">Refine your palate and
+                    explore the world of coffee flavors as a Coffee Taster. Join our tasting panel and help us
+                    ensure the quality and consistency of our coffee blends.</span><span class="v20_52">Current
+                    Openings</span>
+                <div class="v20_53"><span class="v20_54">Apply</span></div>
+                <div class="v20_55"><span class="v20_56">Apply</span></div>
+                <div class="v20_57"><span class="v20_58">Apply</span></div><span class="v20_59">Coffee
+                    Taster</span><span class="v20_60">Barista</span><span class="v20_61">Roaster</span>
+            </div>
+            <div class="v20_63"></div>
+            <div class="v20_64"></div>
+            <div class="v20_65"><span class="v20_66">2021
+                    Master'sBrew All</span><span class="v20_67">Master'sBr</span><span class="v20_68">Terms Of
+                    Service</span><span class="v20_69">Privacy Policy</span><span class="v20_70">Instagra</span><span
+                    class="v20_71">About us</span><span class="v20_72">Linkedin</span><span
+                    class="v20_73">Faceboo</span><span class="v20_74">Contac</span><span
+                    class="v20_75">Twitter</span><span class="v20_76">Menu</span><span class="v20_77">Hom</span></div>
+            <div class="v20_78"></div><span class="v20_79">都会の隠れ家で味わう、</span><span
+                class="v20_80">都会の喧騒を離れ、どこか懐かしい空間で、心温まる一杯をどうぞ。長年愛され続けるこの場所で、ゆっくりと時を忘れるひとときをお過ごしください。</span>
+            <div class="v20_81"><span class="v20_82">Explore MastersBrew</span></div><span
+                class="v20_83">昔ながらの美味しさ</span>
+            <div class="v20_84"><span class="v20_85">Order Now</span></div>
+            <div class="v20_86"><span class="v20_87">Discover More</span></div><span class="v20_88">Indulge
+                in</span><span class="v20_89">Handcrafted</span><span class="v20_90">Specialty</span><span
+                class="v20_91">Signature Blends</span><span class="v20_92">Master's Selection</span><span
+                class="v20_93">98.7%</span><span class="v20_94">Master's Touch</span><span class="v20_95">Exclusive
+                Blend</span><span class="v20_96">Experience</span><span class="v20_97">Brewing</span>
+            <div class="v20_98"></div><span class="v20_99">Get in</span><span class="v20_100">Meet</span><span
+                class="v20_101">Bre</span>
+            <div class="v20_102"></div>
         </div>
     </div>
 </body>
